src/components/RepoItem/ReposItemStyles.scss
.repo-item {
    padding: 1.8rem;
    // height: minmax(30rem, auto);
    border-radius: 0.4rem;
    box-shadow: var(--shadow-card);
    font-size: 1.4rem;
    color: var(--color-grey-dark-1);
    background-color: var(--color-white);

    display: grid;
    grid-template-rows: min-content minmax(6rem, min-content) repeat(2, min-content);
    grid-gap: 0.8rem;
    align-content: space-between;

    &:hover,
    &:focus {
        box-shadow: var(--shadow-card-active);
    }

    &__name {
        display: flex;
        align-items: center;
        grid-row: 1;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        color: var(--color-grey-dark-3);
        font-size: 1.5rem;
        font-weight: 400;
        letter-spacing: -0.5px;
        font-family: var(--mono-font-family);

        svg {
            max-width: 16px;
            margin-right: 0.8rem;
        }
    }

    &__description {
        grid-row: 2;
    }

    &__attributes {
        display: flex;

        svg {
            max-width: 16px;
            margin-right: 0.5rem;
            margin-bottom: 3px;
        }

        & > * {
            display: flex;
            align-items: center;
            margin-right: 1.3rem;
        }

        &--1 {
            grid-row: 3;
        }

        &--2 {
            grid-row: 4;
        }

        &__watching {
            margin-right: auto;
        }
    }
}

.repo-github-url {
    color: var(--color-grey-dark-3);

    &:hover {
        text-decoration: none;
    }
}

